--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,6 @@ androidx-test-ext = "androidx.test.ext:junit:1.1.3"
 androidx-test-espresso = "androidx.test.espresso:espresso-core:3.4.0"
 
 #三方开源组件
-share-wx = "com.tencent.mm.opensdk:wechat-sdk-android-without-mta:6.8.0"
+share-wx = "com.tencent.mm.opensdk:wechat-sdk-android:6.8.0"
 share-qq = "com.tencent.tauth:qqopensdk:3.52.0"
 [bundles]
