--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,23 +20,15 @@ spotless = "com.diffplug.spotless:6.19.0"
 gradlePlugin-android = "com.android.tools.build:gradle:8.0.2"
 gradlePlugin-kotlin = "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21"
 gradlePlugin-mavenPublish = "com.vanniktech:gradle-maven-publish-plugin:0.25.2"
-gradlePlugin-paparazzi = "app.cash.paparazzi:paparazzi-gradle-plugin:1.3.0"
-gradlePlugin-roborazzi = { module = "io.github.takahirom.roborazzi:roborazzi-gradle-plugin", version.ref = "roborazzi" }
 
-accompanist-drawablepainter = "com.google.accompanist:accompanist-drawablepainter:0.30.1"
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidxNavigation" }
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidxNavigation" }
 androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppCompat" }
-androidx-annotation = "androidx.annotation:annotation:1.6.0"
-androidx-benchmark-macro = "androidx.benchmark:benchmark-macro-junit4:1.2.0-alpha15"
-androidx-collection = "androidx.collection:collection:1.2.0"
 androidx-constraintlayout = "androidx.constraintlayout:constraintlayout:2.1.4"
 androidx-core = "androidx.core:core-ktx:1.9.0"
-androidx-exifinterface = "androidx.exifinterface:exifinterface:1.3.6"
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
-androidx-profileinstaller = "androidx.profileinstaller:profileinstaller:1.3.1"
 androidx-recyclerview = "androidx.recyclerview:recyclerview:1.3.0"
 
 androidx-test-core = "androidx.test:core-ktx:1.5.0"
@@ -45,11 +37,6 @@ androidx-test-junit = "androidx.test.ext:junit-ktx:1.1.5"
 androidx-test-rules = "androidx.test:rules:1.5.0"
 androidx-test-runner = "androidx.test:runner:1.5.2"
 androidx-test-uiautomator = "androidx.test.uiautomator:uiautomator:2.2.0"
-androidx-vectordrawable-animated = "androidx.vectordrawable:vectordrawable-animated:1.1.0"
-
-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
-compose-ui-test = "androidx.compose.ui:ui-test-junit4:1.4.3"
 
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
@@ -63,19 +50,6 @@ ktlint = { module = "com.pinterest.ktlint:ktlint-core", version.ref = "ktlint" }
 
 material = "com.google.android.material:material:1.9.0"
 
-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
-okhttp-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
-
-okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
-okio-fakefilesystem = { module = "com.squareup.okio:okio-fakefilesystem", version.ref = "okio" }
-
-robolectric = "org.robolectric:robolectric:4.10.3"
-
-roborazzi-core = { module = "io.github.takahirom.roborazzi:roborazzi", version.ref = "roborazzi" }
-roborazzi-junit = { module = "io.github.takahirom.roborazzi:roborazzi-junit-rule", version.ref = "roborazzi" }
-
-svg = "com.caverock:androidsvg-aar:1.4"
-
 #w分享组件
 share-wx = "com.tencent.mm.opensdk:wechat-sdk-android:6.8.0"
 share-qq = "com.tencent.tauth:qqopensdk:3.52.0"
@@ -88,10 +62,7 @@ test-jvm = [
     "androidx-test-runner",
     "coroutines-test",
     "junit",
-    "kotlin-test",
-    "okhttp-mockwebserver",
-    "okio-fakefilesystem",
-    "robolectric"
+    "kotlin-test"
 ]
 test-android = [
     "androidx-test-core",
@@ -100,6 +71,5 @@ test-android = [
     "androidx-test-runner",
     "coroutines-test",
     "junit",
-    "kotlin-test",
-    "okhttp-mockwebserver"
+    "kotlin-test"
 ]
